Added prefix utility

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Installing my packages
         run: npm ci
 
+      - name: Extract repository name
+        run: echo "BASE_URL=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)" >> $GITHUB_ENV
+
       - name: Build my App
         run: npm run build && touch ./out/.nojekyll
 
