Added dynamic secret

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Build my App
         run: npm run build && touch ./out/.nojekyll
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.6.0
